bugfix: wtf, fix major ui bug causing text to overflow in anime list items

--- a/styles/list.module.css
+++ b/styles/list.module.css
@@ -57,7 +57,7 @@
   color: black;
 }
 
-.item-overview {
+.item-synopsis {
   color: rgb(53, 53, 53);
   letter-spacing: 1px;
   display: -webkit-box;
